cmake_minimum_required(VERSION 3.17)
project(C___Primer_Exercise)
set(CMAKE_CXX_STANDARD 17)
add_subdirectory("Chapter 5")
add_subdirectory("Chapter 6")
add_subdirectory("Chapter 7")
add_subdirectory("Chapter 8")
add_subdirectory("Chapter 9")
add_subdirectory("Chapter 10")
add_subdirectory("Chapter 11")
add_subdirectory("Chapter 12")
add_subdirectory("Chapter 13")
add_subdirectory("Chapter 14")
add_subdirectory("Chapter 15")
add_subdirectory("Chapter 16")
add_subdirectory("Chapter 17")
add_executable(C___Primer_Exercise main.cpp)