cmake_minimum_required(VERSION 3.17)
project(CHAPTER10)
set(CMAKE_CXX_STANDARD 14)
add_executable(10.1 10.1.cpp)
add_executable(10.3 10.3.cpp)
add_executable(10.5 10.5.cpp)
add_executable(10.6 10.6.cpp)
add_executable(10.7 10.7.cpp)
add_executable(10.9 10.9.cpp)
add_executable(10.11 10.11.cpp)
add_executable(10.13 10.13.cpp)
add_executable(10.14 10.14.cpp)
add_executable(10.15 10.15.cpp)
add_executable(10.16 10.16.cpp)
add_executable(10.18 10.18.cpp)
add_executable(10.19 10.19.cpp)
add_executable(10.20 10.20.cpp)
add_executable(10.21 10.21.cpp)
add_executable(10.22 10.22.cpp)
add_executable(10.24 10.24.cpp)
add_executable(10.25 10.25.cpp)
add_executable(10.27 10.27.cpp)
add_executable(10.28 10.28.cpp)
add_executable(10.29 10.29.cpp)
add_executable(10.30 10.30.cpp)
add_executable(10.33 10.33.cpp)
add_executable(10.34 10.34.cpp)
add_executable(10.36 10.36.cpp)
add_executable(10.37 10.37.cpp)
add_executable(10.42 10.42.cpp)

