cmake_minimum_required(VERSION 3.17)
project(CHAPTER11)
set(CMAKE_CXX_STANDARD 14)
add_executable(11.3 11.3.cpp)
add_executable(11.7 11.7.cpp)
add_executable(11.8 11.8.cpp)
add_executable(11.12 11.12.cpp)
add_executable(11.14 11.14.cpp)
add_executable(11.20 11.20.cpp)
add_executable(11.23 11.23.cpp)
add_executable(11.31 11.31.cpp)
add_executable(11.33 11.33.cpp)
add_executable(11.38 11.38.cpp)



