cmake_minimum_required(VERSION 3.17)
project(CHAPTER12)
set(CMAKE_CXX_STANDARD 14)
add_executable(12.1 12.1.cpp)
add_executable(12.6 12.6.cpp)
add_executable(12.7 12.7.cpp)
add_executable(12.14 12.14.cpp)
add_executable(12.16 12.16.cpp)
add_executable(12.19 12.19.cpp)
add_executable(12.22 12.22.cpp)
add_executable(12.23 12.23.cpp)
add_executable(12.24 12.24.cpp)
add_executable(12.26 12.26.cpp)
add_executable(12.27 12.27.cpp 12.27.textquery.h 12.27.textqueryresult.h)
add_executable(12.28 12.28.cpp)
add_executable(12.30 12.30.cpp 12.30.textquery.h 12.30.textqueryresult.h)
add_executable(12.32 12.32.cpp 12.32.textquery.h 12.32.textqueryresult.h 12.32.StrBlob.h 12.32.StrBlobPtr.h)
add_executable(12.33 12.33.cpp 12.33.textquery.h 12.33.textqueryresult.h 12.33.StrBlob.h 12.33.StrBlobPtr.h)





