cmake_minimum_required(VERSION 3.17)
project(CHAPTER14)
set(CMAKE_CXX_STANDARD 14)
set(STR_BLOB ../common/source/StrBlob.cpp)
set(STR_BLOB_PTR ../common/source/StrBlobPtr.cpp)
set(STR_VEC ../common/source/StrVec.cpp)
set(STRING ../common/source/String.cpp)
set(TEXT_QUERY ../common/source/text_query.cpp ../common/source/text_query_result.cpp)
aux_source_directory(../common/source/ HEADER_CXX)

add_executable(14.2 14.2.cpp "../common/header/Sales_data.h")
add_executable(14.7 14.7.cpp ${HEADER_CXX})
add_executable(14.16 14.16.cpp ${HEADER_CXX})

add_executable(14.18 14.18.cpp ${HEADER_CXX})

add_executable(14.20 14.20.cpp "../common/header/Sales_data.h")
add_executable(14.23 14.23.cpp ${HEADER_CXX})

add_executable(14.26 14.26.cpp ${HEADER_CXX})

add_executable(14.27 14.27.cpp ${HEADER_CXX})
add_executable(14.30 14.30.cpp ${HEADER_CXX})
add_executable(14.32 14.32.cpp ${HEADER_CXX})
add_executable(14.34 14.34.cpp)
add_executable(14.35 14.35.cpp)
add_executable(14.37 14.37.cpp)
add_executable(14.38 14.38.cpp)
add_executable(14.42 14.42.cpp)
add_executable(14.43 14.43.cpp)
add_executable(14.44 14.44.cpp)
