cmake_minimum_required(VERSION 3.17)
project(CHAPTER16)
set(CMAKE_CXX_STANDARD 14)
aux_source_directory(../common/source/ HEADER_CXX)
add_executable(16.2 16.2.cpp)
add_executable(16.4 16.4.cpp)
add_executable(16.5 16.5.cpp)
add_executable(16.6 16.6.cpp)
add_executable(16.7 16.7.cpp)
add_executable(16.12 16.12.cpp ${HEADER_CXX})
add_executable(16.14 16.14.cpp)
add_executable(16.16 16.16.cpp)
add_executable(16.19 16.19.cpp)
add_executable(16.21 16.21.cpp ${HEADER_CXX})
add_executable(16.28 16.28.cpp)
add_executable(16.34 16.34.cpp)
add_executable(16.37 16.37.cpp)
add_executable(16.41 16.41.cpp)
add_executable(16.42 16.42.cpp)
add_executable(16.45 16.45.cpp)
add_executable(16.47 16.47.cpp)
add_executable(16.48 16.48.cpp)
add_executable(16.49 16.49.cpp)
add_executable(16.51 16.51.cpp)
add_executable(16.53 16.53.cpp)
add_executable(16.56 16.56.cpp)
add_executable(16.58 16.58.cpp ${HEADER_CXX})
add_executable(16.62 16.62.cpp)
add_executable(16.63 16.63.cpp)

