cmake_minimum_required(VERSION 3.17)
project(CHAPTER17)
set(CMAKE_CXX_STANDARD 14)
aux_source_directory(../common/source/ HEADER_CXX)
add_executable(17.1 17.1.cpp)
add_executable(17.3 17.3.cpp ${HEADER_CXX})
add_executable(17.4 17.4.cpp)
add_executable(17.10 17.10.cpp)
add_executable(17.11 17.11.cpp)
add_executable(17.14 17.14.cpp)
add_executable(17.15 17.15.cpp)
add_executable(17.17 17.17.cpp)
add_executable(17.20 17.20.cpp)
add_executable(17.23 17.23.cpp)
add_executable(17.25 17.25.cpp)
add_executable(17.28 17.28.cpp)
add_executable(17.33 17.33.cpp)
add_executable(17.34 17.34.cpp)
add_executable(17.37 17.37.cpp)

