cmake_minimum_required(VERSION 3.17)
project(CHAPTER6)
set(CMAKE_CXX_STANDARD 14)
add_executable(6.21 6.21.cpp)
add_executable(6.22 6.22.cpp)
add_executable(6.25 6.25.cpp)
add_executable(6.26 6.26.cpp)
add_executable(6.27 6.27.cpp)
add_executable(6.33 6.33.cpp)
add_executable(6.44 6.44.cpp 6.44.h)
add_executable(6.47 6.47.cpp)
add_executable(6.51 6.51.cpp)
add_executable(6.54 6.54.cpp)
