cmake_minimum_required(VERSION 3.17)
project(CHAPTER9)
set(CMAKE_CXX_STANDARD 14)
add_executable(9.4 9.4.cpp)
add_executable(9.5 9.5.cpp)
add_executable(9.11 9.11.cpp)
add_executable(9.13 9.13.cpp)
add_executable(9.14 9.14.cpp)
add_executable(9.15 9.15.cpp)
add_executable(9.16 9.16.cpp)
add_executable(9.18 9.18.cpp)
add_executable(9.19 9.19.cpp)
add_executable(9.20 9.20.cpp)
add_executable(9.21 9.21.cpp)
add_executable(9.23 9.23.cpp)
add_executable(9.25 9.25.cpp)
add_executable(9.26 9.26.cpp)
add_executable(9.27 9.27.cpp)
add_executable(9.28 9.28.cpp)
add_executable(9.31 9.31.cpp)
add_executable(9.33 9.33.cpp)
add_executable(9.38 9.38.cpp)
add_executable(9.41 9.41.cpp)
add_executable(9.43 9.43.cpp)
add_executable(9.44 9.44.cpp)
add_executable(9.45 9.45.cpp)
add_executable(9.46 9.46.cpp)
add_executable(9.47 9.47.cpp)
add_executable(9.50 9.50.cpp)
add_executable(9.51 9.51.cpp)
add_executable(9.52 9.52.cpp 9.52.h)
